# aig240project2

./: .gitignore  ANSWERS.txt  Lab 3  ROS Workspace, Package, Publisher and Subscriber.md  Lab 4 Robot Model and Gazebo.md  PROJECT_INSTRUCTIONS.md  Project 2 - Moving JetAuto in Gazebo.md
archive/: .env  Lab 5  JetAuto Robot.md  PROJECT_INSTRUCTIONS.md  build_absl.exp  build_workspace.exp  check_absl.exp  clone_simulation.exp  extract_and_build.exp  find_gazebo_dirs.exp  find_launch.exp  fix_env.exp  install_ceres.exp  install_deps.exp  install_joy_deps.exp  install_libuvc.exp  install_mapping_deps.exp  install_mapping_deps_v2.exp  install_nav_deps.exp  install_nav_deps_v2.exp  install_ydlidar_sdk.exp  list_src.exp  rebuild_absl_fpic.exp  rebuild_simulation.exp  rebuild_simulation_isolated.exp  rebuild_simulation_token.exp  revert_env.exp  run_control.exp  run_control_explicit.exp  run_control_final.exp  run_control_localhost.exp  run_control_v2.exp  run_install.exp  setup_environment.exp  setup_ssh_key.exp  ssh_checks.exp  start_sim.exp  start_sim_dual_screen.exp  start_sim_persistent.exp  start_sim_screen.exp  transfer_package.exp  (+3 more)
lab4_jetauto_control/: CMakeLists.txt  README.md  package.xml
lab4_jetauto_control/scripts/: jetauto_square_control.py
