<?xml version="1.0"?>
<package format="2">
  <name>lab4_jetauto_control</name>
  <version>1.0.0</version>
  <description>Control JetAuto robot to move in a square pattern in Gazebo</description>

  <maintainer email="student@senecapolytechnic.ca">Student</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
  </export>
</package>
